# kasa

./: .coverage  .gitignore  DEV_CHECKLIST.md  README.md  REPORT.md  TEST_SCENARIOS.md  UI_REFACTOR_REPORT.md  kasa_users.db  kasapro.ini  pyproject.toml  pytest.ini  run.py
.github/: copilot-instructions.md
buttons_enhanced/: analysis_report.json
design/: generate_sprites.py  mockups.css  mockups.html
kasa_data/: admin.db  admin.db-shm  admin.db-wal
kasapro/: __init__.py  __main__.py  app.py  config.py  self_check.py  utils.py
kasapro/core/: banka_macros.py  fuzzy.py  logging.py  version.py
kasapro/db/: __init__.py  connection.py  main_db.py  schema.py  users_db.py
kasapro/modules/: __init__.py
kasapro/qa/: __init__.py  theme_smoke_test.py  ui_smoke.py
kasapro/services/: __init__.py  cari_service.py  company_users_service.py  context.py  export_service.py  messages_service.py  settings_service.py  wms_service.py
kasapro/ui/: __init__.py  _windows_all.py  base.py  create_form_registry.py  dialogs.py  navigation.py  (+5 more)
modules/: __init__.py
tests/: conftest.py  report.py  run_ui_smoke.py  smoke_test.py  test_diagnostics_plugin.py  test_dms_module.py  test_hakedis_module.py  test_hr_module.py  test_integrations_module.py  test_invoice_module.py  test_notes_reminders.py  test_quote_order.py  test_self_check.py  test_smoke.py  test_trade_module.py  test_wms_stock.py
tools/: bench_startup.py  cleanup_report.md  demo_3d_buttons.py  enhance_buttons.py  profile_startup.py  repo_audit.py  run_crud_tests.py  test_repos.py  test_repos_full.py  ui_smoke.py
(+148 files in other folders)
