[project]
name = "kasapro"
version = "3.0.0-pro"
description = "KasaPro v3 - Tkinter + SQLite muhasebe/kasa uygulaması (modüler)."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
kasapro = "kasapro.app:main"

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
pdf = ["reportlab>=4.0.0"]
ui = ["tksheet>=6.0.0"]
